Adds section on modularisation